Criando documentação refrente as rotas de controller
